--- a/charts/c100-application/templates/sidekiq.yaml
+++ b/charts/c100-application/templates/sidekiq.yaml
@@ -31,7 +31,7 @@ spec:
       {{- ( include "hmcts.dnsConfig.v2" $base ) | indent 6 }}
       {{- if $globals.enableKeyVaults }}
       volumes:
-        - name: c100
+        - name: vault-c100
           csi:
             driver: secrets-store.csi.k8s.io
             readOnly: true
