--- a/charts/c100-application/values.stg.template.yaml
+++ b/charts/c100-application/values.stg.template.yaml
@@ -2,3 +2,5 @@ base:
   # Don't modify below here
   image: ${IMAGE_NAME}
   ingressHost: ${SERVICE_FQDN}
+  environment:
+    RAILS_ENV: 'production'
