fix broken config

--- a/charts/c100-application/templates/sidekiq.yaml
+++ b/charts/c100-application/templates/sidekiq.yaml
@@ -62,7 +62,7 @@ spec:
               path: /
               port: 7433
             initialDelaySeconds: 80
-            timeoutSeconds:
+            timeoutSeconds: 5
           livenessProbe:
             httpGet:
               path: /
