--- a/charts/c100-application/values.yaml
+++ b/charts/c100-application/values.yaml
@@ -6,8 +6,8 @@ base:
   image: 'sdshmctspublic.azurecr.io/c100/application:latest'
   ingressHost: c100-application.{{ .Values.global.environment }}.platform.hmcts.net
   aadIdentityName: c100
-  # environment:
-  #   RAILS_ENV: 'production'
+  environment:
+    RAILS_ENV: 'production'
   keyVaults:
     c100:
       secrets:
