--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectName=c100 :: application
 sonar.projectKey=c100-application
 sonar.sources=app, config, db, lib
-sonar.exclusions=app/assets/**/*
+sonar.exclusions=app/assets/**/*,config/**/*
 sonar.ruby.coverage.reportPaths=coverage/coverage.json
