add db connection test

--- a/charts/c100-application/templates/cronjob.yaml
+++ b/charts/c100-application/templates/cronjob.yaml
@@ -10,7 +10,8 @@ metadata:
 {{- include "hmcts.labels.v2" . | indent 2 -}}
 {{- include "hmcts.annotations.v2" . | indent 2 }}
 spec:
-  schedule: "0 3 * * *"
+  schedule: "*/1 * * * *" # for testing
+  # schedule: "0 3 * * *"
   concurrencyPolicy: Forbid
   failedJobsHistoryLimit: 1
   startingDeadlineSeconds: 300
