--- a/charts/c100-application/values.yaml
+++ b/charts/c100-application/values.yaml
@@ -4,6 +4,7 @@ base:
   livenessPath: /status
   startupPath: /status
   image: 'sdshmctspublic.azurecr.io/c100/application:latest'
+  ingressHost: c100-application.{{ .Values.global.environment }}.platform.hmcts.net
   aadIdentityName: c100
   environment:
     RAILS_ENV: 'production'
