--- a/charts/c100-application/values.dev.template.yaml
+++ b/charts/c100-application/values.dev.template.yaml
@@ -4,7 +4,7 @@ base:
   ingressHost: ${SERVICE_FQDN}
   environment:
     DATABASE_URL: 'postgres://{{ .Values.postgresql.auth.username}}:{{ .Values.postgresql.auth.password}}@{{ .Release.Name }}-postgresql/{{ .Values.postgresql.auth.database}}'
-    RAILS_ENV: 'test'
+    RAILS_ENV: 'production'
     REDIS_URL: "redis://${SERVICE_NAME}-redis-master:6379"
   postgresql:
     enabled: true
