--- a/charts/c100-application/values.dev.template.yaml
+++ b/charts/c100-application/values.dev.template.yaml
@@ -6,6 +6,7 @@ base:
     DATABASE_URL: 'postgres://{{ .Values.postgresql.auth.username}}:{{ .Values.postgresql.auth.password}}@{{ .Release.Name }}-postgresql/{{ .Values.postgresql.auth.database}}'
     RAILS_ENV: 'production'
     REDIS_URL: "redis://${SERVICE_NAME}-redis-master:6379"
+    DATABASE_SSLMODE: 'allow'
   postgresql:
     enabled: true
     debug: true
