change DATABASE_SSLMODE to allow on cronjobs

--- a/charts/c100-application/templates/sidekiq.yaml
+++ b/charts/c100-application/templates/sidekiq.yaml
@@ -91,4 +91,6 @@ spec:
               value: postgres://{{ .Values.base.postgresql.auth.username}}:{{ .Values.base.postgresql.auth.password}}@{{ .Release.Name }}-postgresql/{{ .Values.base.postgresql.auth.database }}
             - name: REDIS_URL
               value: {{ .Values.redis.url }}
+            - name: DATABASE_SSLMODE
+              value: 'allow'
             {{ end }}
