Add items from c100 migration repo

--- a/config/database.yml
+++ b/config/database.yml
@@ -15,9 +15,5 @@ test:
 
 production:
   <<: *default
-  host: <%= ENV['DATABASE_HOST'] %>
-  port: 5432
-  database: <%= ENV['DATABASE_NAME'] %>
-  username: <%= ENV['DATABASE_USERNAME'] %>
-  password: '<%= ENV["DATABASE_PASSWORD"] %>'
-  sslmode: <%= ENV.fetch('DATABASE_SSLMODE', 'require') %>
+  sslmode: <%= ENV.fetch('DATABASE_SSLMODE', 'verify-full') %>
+  sslrootcert: <%= ENV['RDS_COMBINED_CA_BUNDLE'] %>
