add various tests

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,5 @@ AUTH0_CLIENT_SECRET=client-secret
 # having to go all the trouble of getting Auth0 credentials, just uncomment this.
 #
 # AUTH0_BYPASS_LOCALHOST=1
+
+SKIP_VIRUS_CHECK=true
