--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,4 @@
-require: rubocop-performance
+# require: rubocop-performance # To re-add in future
 
 AllCops:
   SuggestExtensions: false
@@ -22,6 +22,8 @@ AllCops:
 
 Metrics/ClassLength:
   Max: 105
+  Exclude:
+    - app/models/document_upload.rb
 
 Layout/LineLength:
   Max: 130
@@ -120,5 +122,5 @@ Naming/MethodParameterName:
 Metrics/AbcSize:
   Max: 24.5
 
-Performance/RedundantMerge:
-  Enabled: false
+# Performance/RedundantMerge:
+#   Enabled: false
