add download link for consent order drafts

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,8 @@ AUTH0_CLIENT_SECRET=client-secret
 # AUTH0_BYPASS_LOCALHOST=1
 
 SKIP_VIRUS_CHECK=true
+
+AWS_ACCESS_KEY_ID: add_me
+AWS_SECRET_ACCESS_KEY: add_me
+AWS_REGION: add_me
+AWS_BUCKET: add_me
