--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "govuk-frontend": "3.14.0"
+    "govuk-frontend": "^4.0.0"
   }
 }
