--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,4 @@
-# require: rubocop-performance # To re-add in future
+require: rubocop-performance # To re-add in future
 
 AllCops:
   SuggestExtensions: false
