--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,7 @@ jobs:
       test_command:
         type: string
         default: bundle exec rake test:all_the_things
+    resource_class: medium+
     steps:
       - browser-tools/install-browser-tools
       - checkout
