--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,9 @@ jobs:
       - browser-tools/install-browser-tools
       - run:
           name: remove chromedriver license # prevents checkout
-          command: rm project/LICENSE.chromedriver
+          command: |
+            pwd
+            rm LICENSE.chromedriver
       - checkout
 
       # Download and cache dependencies
