--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ orbs:
 references:
   app_containers: &app_containers
     docker:
-      - image: cimg/ruby:2.7.7-browsers
+      - image: cimg/ruby:2.7.6-browsers
         environment:
           RAILS_ENV: test
           RACK_ENV: test
@@ -39,6 +39,10 @@ jobs:
     resource_class: medium+
     steps:
       - browser-tools/install-browser-tools
+      - run:
+          name: Remove chromedriver license # prevents checkout
+          command: |
+            rm LICENSE.chromedriver
       - checkout
 
       # Download and cache dependencies
