--- a/config/court_slugs.yml
+++ b/config/court_slugs.yml
@@ -91,3 +91,4 @@ centralisation:
   - canterbury-combined-court-centre
   - hertford-county-court-and-family-court
   - high-wycombe-magistrates-court-and-family-court
+  - lancaster-courthouse
