--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -7,4 +7,4 @@ std_opts = "--format #{ENV['CUCUMBER_FORMAT'] || 'pretty'} --strict --tags 'not 
 default: <%= std_opts %> --publish
 wip: --tags @wip:3 --wip features
 rerun: <%= rerun_opts %> --format rerun --out rerun.txt --strict --tags 'not @wip'
-parallel: --format 'pretty' --tags 'not @wip' --tags 'not @alternate_layout' --publish
+parallel: --format 'pretty' --tags 'not @wip' --publish
