--- a/config/court_slugs.yml
+++ b/config/court_slugs.yml
@@ -92,3 +92,4 @@ centralisation:
   - hertford-county-court-and-family-court
   - high-wycombe-magistrates-court-and-family-court
   - lancaster-courthouse
+  - chelmsford-magistrates-court-and-family-court
