--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@
 version: 2.1
 
 orbs: 
-  browser-tools: circleci/browser-tools@1.4.0
+  browser-tools: circleci/browser-tools@1.4.4
 
 references:
   app_containers: &app_containers
@@ -28,7 +28,6 @@ references:
           GITHUB_TEAM_NAME_SLUG: sustainingdevs
           REPO_NAME: c100-application
 
-
 jobs:
   test:
     <<: *app_containers
@@ -40,6 +39,8 @@ jobs:
     steps:
       - run: sudo apt-get update
       - browser-tools/install-browser-tools
+        chrome-version: 116.0.5845.96 # TODO: remove when chromedriver downloads are fixed
+        replace-existing: true # TODO: remove when: https://github.com/CircleCI-Public/browser-tools-orb/issues/75
       - run:
           name: Remove chromedriver license # prevents checkout
           command: |
