--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,8 +4,8 @@
 #
 version: 2.1
 
-orbs: 
-  browser-tools: circleci/browser-tools@1.4.4
+# orbs: 
+#   browser-tools: circleci/browser-tools@1.4.4
 
 references:
   app_containers: &app_containers
@@ -38,9 +38,9 @@ jobs:
     resource_class: medium+
     steps:
       - run: sudo apt-get update
-      - browser-tools/install-browser-tools:
-          chrome-version: 116.0.5845.96 # TODO: remove when chromedriver downloads are fixed
-          # replace-existing: true # TODO: remove when: https://github.com/CircleCI-Public/browser-tools-orb/issues/75
+      # - browser-tools/install-browser-tools:
+      #     chrome-version: 116.0.5845.96 # TODO: remove when chromedriver downloads are fixed
+      #     # replace-existing: true # TODO: remove when: https://github.com/CircleCI-Public/browser-tools-orb/issues/75
       - run:
           name: Remove chromedriver license # prevents checkout
           command: |
