--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,10 +41,10 @@ jobs:
       # - browser-tools/install-browser-tools:
       #     chrome-version: 116.0.5845.96 # TODO: remove when chromedriver downloads are fixed
       #     # replace-existing: true # TODO: remove when: https://github.com/CircleCI-Public/browser-tools-orb/issues/75
-      - run:
-          name: Remove chromedriver license # prevents checkout
-          command: |
-            rm LICENSE.chromedriver
+      # - run:
+      #     name: Remove chromedriver license # prevents checkout
+      #     command: |
+      #       rm LICENSE.chromedriver
       - checkout
 
       # Download and cache dependencies
