--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -243,7 +243,13 @@ workflows:
       #     filters:
       #       branches:
       #         only: master
-      - build_and_push_image
+      - build_and_push_image:
+          name: build-staging
+          requires:
+            - test
+          filters:
+            branches:
+              only: master
       - deploy_image_to_live:
           name: deploy-staging-live
           env_name: staging
