--- a/.env.example
+++ b/.env.example
@@ -34,7 +34,7 @@ AUTH0_CLIENT_SECRET=client-secret
 
 SKIP_VIRUS_CHECK=true
 
-AWS_S3_ACCESS_KEY_ID: add_me
-AWS_S3_SECRET_ACCESS_KEY: add_me
+#AWS_S3_ACCESS_KEY_ID: add_me
+#AWS_S3_SECRET_ACCESS_KEY: add_me
 AWS_S3_REGION: add_me
 AWS_S3_BUCKET: add_me
